@startuml
title ExtractorService Class Diagram

interface ExtractorService {
    + upload(localSrc, remoteSrc)
    + download(localSrc, remoteSrc)
    + delete(remoteSrc, recursive)
    + list(remoteSrc): string[]
}

class ExtractorServiceFactory {
    + getAdapter(provider: CloudProvider): ExtractorService
}

class BucketService {
    - adapter: ExtractorService
    + BucketService(adapter: ExtractorService)
    + upload(...)
    + download(...)
    + delete(...)
    + list(...)
}

class ExtractController {
    - bucketService: BucketService
    + ExtractController(bucketService: BucketService)
    + upload(...)
    + download(...)
    + delete(...)
    + list(...)
}

class AzureAdapterImpl
class AwsAdapterImpl
class GcpAdapterImpl

ExtractorService <|.. AzureAdapterImpl
ExtractorService <|.. AwsAdapterImpl
ExtractorService <|.. GcpAdapterImpl

ExtractorServiceFactory --> ExtractorService : <<creates>>
BucketService --> ExtractorService : <<depends on>>
ExtractController --> BucketService : <<depends on>>
@enduml
